fixed some layout issues on survey page, started on save & resume button

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -78,6 +78,10 @@ body > * {
   margin: auto;
 }
 
+.contain-md {
+  max-width: 70vw;
+}
+
 /* Link styles */
 /* TODO: fix so it applies just to external links
 a[href]:visited {
