--- a/assets/css/granular.css
+++ b/assets/css/granular.css
@@ -1,13 +1,14 @@
 /* Home page styles */
-.home, .contain-lrg {
+.contain-md{
   display: flex;
+  flex-direction: row;
+}
+
+.home, .contain-lrg {
   justify-content: flex-start;
   max-width:80vw;
   flex-direction: column;
-}
-
-.contain-lrg{
-  flex-direction: row;
+  display: flex;
 }
 
 .gather {
@@ -157,7 +158,7 @@
 }
 .brown-bg {
   background-color: #A17354;
-  margin-top:3em;
+  margin-top:2em;
 }
 .brown-bg .contain-sm {
   background-color: #FFFEF5;
@@ -201,8 +202,13 @@
 }
 
 .left-col {
-  flex:0 0 30%;
-  padding:0 2em 1em 0;
+  flex:0 0 24%;
+  margin-right: 1.5em;
+  align-self: baseline;
+}
+
+.left-col, .right-col, .save-btn {
+  box-shadow: 2px 2px 4px 2px rgba(0,0,0,.2);
 }
 
 .submenu {
@@ -215,7 +221,7 @@
 }
 .submenu h4 {
   padding: 1em;
-  font-size: 1.15em;
+  font-size: 1em;
   font-weight: normal;
 }
 .submenu ul {
@@ -262,6 +268,7 @@ small black fill green border */
   background: #000;
   padding:1em 1.4em;
   border:1px solid rgba(255,255,255,0.2);
+  font-size: 0.9em;
 }
 .submenu div > ul {
   display:none;
@@ -270,12 +277,12 @@ small black fill green border */
   display: initial;
 }
 .right-col {
-  flex:0 0 70%;
+  flex:0 0 63%;
   background-color: #fffef5;
-  padding: 3em;
+  padding: 4em;
 }
 .right-col img {
-  max-width: 80%;
+  max-width: 100%;
   margin:0 auto;
   display:block;
 }
@@ -393,4 +400,14 @@ form span {
 }
 form input {
   margin-right: 10px;
+}
+
+.save-btn {
+  align-self: start;
+  margin-left: -3em;
+  background-color: #000;
+  color: #fff;
+  border: 0;
+  margin-top: 20px;
+  padding: 16px;
 }
